--- a/app/src/main/res/layout/item_container_current_location.xml
+++ b/app/src/main/res/layout/item_container_current_location.xml
@@ -1,56 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="@dimen/_4sdp"
+    app:cardElevation="0dp"
+    app:strokeColor="@color/sonic_silver"
+    app:strokeWidth="1dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textCurrentDate"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_4sdp"
-        android:textColor="@color/sonic_silver"
-        android:textSize="@dimen/_10ssp"
-        app:layout_constraintEnd_toStartOf="@id/imageCurrentLocation"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Today, 30th June 2024" />
+        android:padding="@dimen/_8sdp">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageLocation"
-        android:layout_width="@dimen/_22sdp"
-        android:layout_height="@dimen/_22sdp"
-        android:layout_marginTop="@dimen/_4sdp"
-        android:src="@drawable/round_location_on_24"
-        android:tint="@color/sonic_silver"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textCurrentDate" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textCurrentDate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_4sdp"
+            android:textColor="@color/sonic_silver"
+            android:textSize="@dimen/_10ssp"
+            app:layout_constraintEnd_toStartOf="@id/imageCurrentLocation"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Today, 30th June 2024" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textCurrentLocation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginEnd="@dimen/_4sdp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/raisin_black"
-        android:textSize="@dimen/_12ssp"
-        app:layout_constraintBottom_toBottomOf="@id/imageLocation"
-        app:layout_constraintEnd_toStartOf="@id/imageCurrentLocation"
-        app:layout_constraintStart_toEndOf="@id/imageLocation"
-        app:layout_constraintTop_toTopOf="@id/imageLocation"
-        tools:text="Zenica, BiH" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageLocation"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:src="@drawable/round_location_on_24"
+            android:tint="@color/sonic_silver"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textCurrentDate" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageCurrentLocation"
-        android:layout_width="@dimen/_22sdp"
-        android:layout_height="@dimen/_22sdp"
-        android:src="@drawable/round_my_location_24"
-        android:tint="@color/sonic_silver"
-        app:layout_constraintBottom_toBottomOf="@id/imageLocation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textCurrentDate" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textCurrentLocation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/raisin_black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintBottom_toBottomOf="@id/imageLocation"
+            app:layout_constraintEnd_toStartOf="@id/imageCurrentLocation"
+            app:layout_constraintStart_toEndOf="@id/imageLocation"
+            app:layout_constraintTop_toTopOf="@id/imageLocation"
+            tools:text="Zenica, BiH" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageCurrentLocation"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:src="@drawable/round_my_location_24"
+            android:tint="@color/sonic_silver"
+            app:layout_constraintBottom_toBottomOf="@id/imageLocation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textCurrentDate" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
